Add new page type for newsletter pages

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -3,6 +3,11 @@
     <file target-language="de" datatype="plaintext" original="messages">
         <header/>
         <body>
+            <!-- pages -->
+            <trans-unit id="pages.page_type_newsletter">
+                <source>Newsletter</source>
+            </trans-unit>
+
             <!-- tx_nrcuniversalmessenger_domain_model_newsletterchannel -->
             <trans-unit id="tx_nrcuniversalmessenger_domain_model_newsletterchannel">
                 <target>Newsletter-Kanel</target>
