--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -24,6 +24,9 @@
             <trans-unit id="tx_nrcuniversalmessenger_domain_model_newsletterchannel.title.description">
                 <source>The title the newsletter channel.</source>
             </trans-unit>
+            <trans-unit id="tx_nrcuniversalmessenger_domain_model_newsletterchannel.description">
+                <source>Description</source>
+            </trans-unit>
             <trans-unit id="tx_nrcuniversalmessenger_domain_model_newsletterchannel.sender">
                 <source>Sender email address</source>
             </trans-unit>
