--- a/Resources/Private/Language/de.locallang_mod_um.xlf
+++ b/Resources/Private/Language/de.locallang_mod_um.xlf
@@ -15,6 +15,9 @@
             </trans-unit>
 
             <!-- Labels -->
+            <trans-unit id="openInUniversalMessenger">
+                <target>Im UM öffnen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
