Render newsletter using existing page layouts

--- a/Resources/Private/Language/de.locallang_mod_um.xlf
+++ b/Resources/Private/Language/de.locallang_mod_um.xlf
@@ -15,7 +15,7 @@
 
             <!-- Labels -->
             <trans-unit id="openInUniversalMessenger">
-                <target>Im UM öffnen</target>
+                <target>Im Universal Messenger öffnen</target>
             </trans-unit>
         </body>
     </file>
