--- a/Resources/Private/Language/locallang_mod_um.xlf
+++ b/Resources/Private/Language/locallang_mod_um.xlf
@@ -15,7 +15,7 @@
 
             <!-- Labels -->
             <trans-unit id="openInUniversalMessenger">
-                <source>Open in UM</source>
+                <source>Open in Universal Messenger</source>
             </trans-unit>
         </body>
     </file>
